reorganize the secret folder

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -63,7 +63,7 @@
    
 
     <script>
-    var video = document.getElementById("bgvideo");
+    var video = document.getElementById("bgvid");
     video.addEventListener('touchstart', function(e) {
       e.preventDefault();
       video.play();
